Fix font alignment property to text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -887,7 +887,7 @@ body.nav-open {
   display: block;
   border-bottom: thin dotted white;
   font-family: "Georgia", serif;
-  font-align: left;
+  text-align: left;
 }
 
 .sectionnav a:hover {
